--- a/templates/auther/index.html
+++ b/templates/auther/index.html
@@ -99,7 +99,7 @@ body {
       {% if user.is_authenticated %}
       <h3> Hello {{ fname }} </h3>
       <h4> You're successfully logged in</h4>
-      <button type="submit"><a href="/upload">Upload Page</a></button>
+      <button type="submit"><a href="/upload">Upload Pages</a></button>
       <button type="submit"><a href="/invoice">create invoice</a></button>
 
       <button type="submit"><a href="/sample">Sample Invoice</a></button>
