--- a/templates/auther/invoice.html
+++ b/templates/auther/invoice.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class="container" id="formtest">
-    <h1 class="bg-danger" align="center">Invoice Generator</h1><br><br>
+    <h1 class="bg-danger" align="center">Invoices Generator</h1><br><br>
 
     <div class="alert alert-success" id="alert" hidden>
         <strong>Success!</strong>
