--- a/templates/auther/index.html
+++ b/templates/auther/index.html
@@ -75,7 +75,7 @@ body {
        
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
+        <a class="nav-link disabled" href="#">Disables</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
