--- a/templates/auther/index.html
+++ b/templates/auther/index.html
@@ -1,4 +1,4 @@
-{% load static %}
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,55 +6,24 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel="stylesheet" type="css" href="{% static "index.css"%}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<style>
+     section{
+        background-image: url(".jpg");
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        height:1000px;
+        
+        width:100%;
+     }
+     
+    </style>
 </head>
 
-<style media="screen">
-
-.container{
-    width : 100%;
-    height: 100vh;
-    background-color: rgb(213, 143, 38);
-    background-position: center;
-    background-size: cover;
-    position: relative;
-}
- /* button{
-    text-align: center;  
-    border: 7px solid red;  
-    width: 300px;  
-    height: 200px;  
-    padding-top: 100px;  
-    
-} */
-
-/* 
-body {
-  background-image: url("/image/main.jpg");
-                position: relative;
-                background-size: cover;
-                background-position: center;
-                background-repeat: no-repeat;
-                height:0px; /* apane hisap de de dena */
-                /* width:0px;
-}  */
-
-/* body {
-  background-image: url("/image/main.jpg");
-  position: relative;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  height: 100px;
-  width:0px;
-} */
-
-
-</style>
-
 <body>
-<nav  class="navbar navbar-dark bg-primary navbar navbar-expand-lg bg-body-tertiary">
+
+<nav  class="navbar navbar-dark bg-secondary navbar navbar-expand-lg bg-body-tertiary">
   <a class="navbar-brand" href="#">Navbar</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -68,14 +37,14 @@ body {
       <li class="nav-item">
         <a class="nav-link" href="#">Link</a>
       </li>
-      <li class="nav-item dropdown"> 
+      <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Dropdown
         </a>
        
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disables</a>
+        <a class="nav-link disabled" href="#">Disabled</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
@@ -86,30 +55,62 @@ body {
 </nav>
     {% for message in messages %}
     <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+        
+    
         <strong>Message:</strong>{{ message }}
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
         </button>
     </div>
+    {% endfor %} 
 
-    <div class="section">
-      {% endfor %} 
+    
+<!-- <style>
+.container {
+  position: relative;
+}
 
-      <h3>Welcome to invoice</h3>
-      {% if user.is_authenticated %}
-      <h3> Hello {{ fname }} </h3>
-      <h4> You're successfully logged in</h4>
-      <button type="submit"><a href="/upload">Upload Page</a></button>
-      <button type="submit"><a href="/invoice">create invoice</a></button>
+.center {
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  text-align: center;
+  font-size: 18px;
+}
 
-      <button type="submit"><a href="/sample">Sample Invoice</a></button>
-      <button type="submit"><a href="/signout">signout</a></button>
+img { 
+  width: 100%;
+  height: auto;
+  opacity: 0.3;
+}
+</style>
+</head>
+<body>
 
-      {% else %}
-      <button type="submit"><a href="/signup">signup</a></button>
-      <button type="submit"><a href="/signin">signin</a></button>
-      {% endif %}
-    </div>
+<h2>Image Text</h2>
+
+<p>Welcome to Invoice</p>
+
+<div class="container">
+  <img src="img_5terre_wide.jpg" alt="Cinque Terre" width="1000" height="300">
+  <div class="center">Centered</div>
+</div>
+
+</body>
+</html> --> 
+
+  <section>
+    <h3>Welcome to invoice</h3>
+    {% if user.is_authenticated %}
+    <h3> Hello {{ fname }} </h3>
+    <h4> You're successfully logged in</h4>
+    <button type="submit"><a href="/signout">signout</a></button>
+
+    {% else %}
+    <button type="submit"><a href="/signup">signup</a></button>
+    <button type="submit"><a href="/signin">signin</a></button>
+    {% endif %}
+    </section>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
