--- a/templates/auther/index.html
+++ b/templates/auther/index.html
@@ -8,23 +8,74 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <style>
+  .h1 {
+  font-family: "Times New Roman", Times, serif;
+}
+.h3 {
+  font-family: "Times New Roman", Times, serif;
+}
+.h4 {
+  font-family: "Times New Roman", Times, serif;
+}
+  .button {
+  display: inline-block;
+  border-radius: 4px;
+  background-color: #2324240e;
+  border: none;
+  color: #0c0c0c;
+  text-align: center;
+  font-size: 28px;
+  padding: 20px;
+  width: 200px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+
+.button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.button span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.button:hover span {
+  padding-right: 25px;
+}
+
+.button:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
+ 
      section{
-        background-image: url(".jpg");
+        background-image: url("https://mpm.ph/wp-content/uploads/2020/12/sales-invoice-vs-billing-invoice.jpg");
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
         height:1000px;
         
         width:100%;
+
      }
-     /* hiiii */
+     
     </style>
 </head>
 
 <body>
 
 <nav  class="navbar navbar-dark bg-secondary navbar navbar-expand-lg bg-body-tertiary">
-  <a class="navbar-brand" href="#">Navbar</a>
+  <a class="navbar-brand" href="#">Home</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -32,25 +83,22 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home1 <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#">Link <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
+      
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Dropdown
         </a>
+        
+        </div>
        
       </li>
       <li class="nav-item">
         <a class="nav-link disabled" href="#">Disabled</a>
       </li>
     </ul>
-    <!-- <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form> -->
+    
   </div>
 </nav>
     {% for message in messages %}
@@ -65,50 +113,25 @@
     {% endfor %} 
 
     
-<!-- <style>
-.container {
-  position: relative;
-}
 
-.center {
-  position: absolute;
-  top: 50%;
-  width: 100%;
-  text-align: center;
-  font-size: 18px;
-}
-
-img { 
-  width: 100%;
-  height: auto;
-  opacity: 0.3;
-}
-</style>
-</head>
-<body>
-
-<h2>Image Text</h2>
-
-<p>Welcome to Invoice</p>
-
-<div class="container">
-  <img src="img_5terre_wide.jpg" alt="Cinque Terre" width="1000" height="300">
-  <div class="center">Centered</div>
-</div>
-
-</body>
-</html> --> 
 
   <section>
-    <h3>Welcome to invoice</h3>
+    <h1 class="h1">Welcome to invoice</h1>
+
     {% if user.is_authenticated %}
-    <h3> Hello {{ fname }} </h3>
-    <h4> You're successfully logged in</h4>
-    <button type="submit"><a href="/signout">signout</a></button>
+    <h3 class="h3"> Hello {{ fname }} </h3>
+    <h4 class="h4"> You're successfully logged in</h4>
+    <button class ="button" type="submit">
+      <a href="/signout"><span>Sign-out</span></a>
+    </button>
 
     {% else %}
-    <button type="submit"><a href="/signup">signup</a></button>
-    <button type="submit"><a href="/signin">signin</a></button>
+    <button class="button" type="submit" style="vertical-align:middle">
+      <a href="/signup"><span>Sign-up</span></a>
+    </button>
+    <button class="button" type="submit" style="vertical-align:middle">
+      <a href="/signin"><span>Sign-in</span></a>
+    </button>
     {% endif %}
     </section>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
