--- a/templates/auther/signin.html
+++ b/templates/auther/signin.html
@@ -239,8 +239,10 @@ span.psw {
   </div>
 
   <div class="container">
-    <label for="username"><b>Username</b></label>
-    <input type="text" placeholder="Username" name="username" required>
+    <!-- <label for="username"><b>Username</b></label>
+    <input type="text" placeholder="Username" name="username" required> -->
+    <label for="username"><b>Username<b></label>
+        <input type="text"  placeholder="Enter Username" id="username" name="username" Required>
 
     <label for="pass1"><b>Password</b></label>
     <input type="password" placeholder="Enter Password" name="pass1" required>
