--- a/templates/auther/signin.html
+++ b/templates/auther/signin.html
@@ -148,7 +148,7 @@ button{
         <label for="pass1">Password</label>
         <input type="password" placeholder="Password" id="pass1" name="pass1" Required>
         <button type="submit">Log In</button>
-        <!-- <input type="button" value=""> -->
+        <input type="button" value=""> -->
         <!-- <div class="social">
           <div class="go"><i class="fab fa-google"></i>  Google</div>
           <div class="fb"><i class="fab fa-facebook"></i>  Facebook</div>
