--- a/templates/auther/sample.html
+++ b/templates/auther/sample.html
@@ -11,6 +11,45 @@
 </head>
 
 <style media="screen">
+  .button {
+  display: inline-block;
+  border-radius: 4px;
+  background-color: #1f21240e;
+  border: none;
+  color: #0c0c0c;
+  text-align: center;
+  font-size: 28px;
+  padding: 20px;
+  width: 200px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+
+.button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.button span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.button:hover span {
+  padding-right: 25px;
+}
+
+.button:hover span:after {
+  opacity: 1;
+  right: 0;
+}
 
 .container{
     width : 100%;
@@ -20,52 +59,86 @@
     background-size: cover;
     position: relative;
 }
- /* button{
-    text-align: center;  
-    border: 7px solid red;  
-    width: 300px;  
-    height: 200px;  
-    padding-top: 100px;  
-    
-} */
-body {
-  background-image: url('/image/main.jpg');
-  background-color: rgb(247, 249, 252);
+.topnav {
+  overflow: hidden;
+  background-color: #333;
 }
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
+}
+
+.topnav-right {
+  float: right;
+}
+
+
+
 </style>
 
 <body>
-<nav  class="navbar navbar-dark bg-primary navbar navbar-expand-lg bg-body-tertiary">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
-        </a>
-       
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+  <div class="topnav">
+    <a class="active" href="#home">Home</a>
+    <a href="#news">News</a>
+    <a href="/contact">Contact</a>
+    <div class="topnav-right">
+      <a href="#search">Search</a>
+      <a href="/About">About</a>
+    </div>
   </div>
-</nav>
-    <h1>Here are 3 samples</h1>
+  
+  <div style="padding-left:16px">
+    
+  </div>
+      {% for message in messages %}
+      <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+          
+      
+          <strong>Message:</strong>{{ message }}
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+          </button>
+      </div>
+      {% endfor %} 
+    
+      <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+          
+      
+          <strong></strong>{{ message }}
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+          </button>
+      </div>
+
+
+
+<h1 style="font-family:'Times New Roman', Times, serif;">Here Are Samples </h1>
+<section> 
+  <button class="button" type="submit" style="vertical-align:middle">
+    <a href="/temp1"><span>Template-1</span></a>
+  </button>
+  <button class="button" type="submit" style="vertical-align:middle">
+    <a href="/temp2"><span>Template-2</span></a>
+  </button>
+  <button class="button" type="submit" style="vertical-align:middle">
+    <a href="/temp3"><span>Template-3</span></a>
+  </button>
+</section>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
