--- a/templates/auther/index.html
+++ b/templates/auther/index.html
@@ -149,6 +149,10 @@ body {
     <button class ="button" type="submit" style="vertical-align:middle">
       <a href="/sample"><span>Sample Template</span></a>
     </button>
+    <button class ="button" type="submit" style="vertical-align:middle">
+      <a href="/form"><span>Upload File</span></a>
+    </button>
+
 
     {% else %}
     <button class="button" type="submit" style="vertical-align:middle">
