--- a/templates/auther/index.html
+++ b/templates/auther/index.html
@@ -152,6 +152,10 @@ body {
     <button class ="button" type="submit" style="vertical-align:middle">
       <a href="/form"><span>Upload File</span></a>
     </button>
+    <button class ="button" type="submit" style="vertical-align:middle">
+      <a href="/invoice"><span>Generate Invoice</span></a>
+    </button>
+
 
 
     {% else %}
