--- a/templates/auther/index.html
+++ b/templates/auther/index.html
@@ -149,11 +149,12 @@ body {
     <button class ="button" type="submit" style="vertical-align:middle">
       <a href="/sample"><span>Sample Template</span></a>
     </button>
-    <button class ="button" type="submit" style="vertical-align:middle">
-      <a href="/form"><span>Upload File</span></a>
-    </button>
-    <button class ="button" type="submit" style="vertical-align:middle">
+    
+    <!-- <button class ="button" type="submit" style="vertical-align:middle">
       <a href="/invoice"><span>Generate Invoice</span></a>
+    </button> -->
+    <button class ="button" type="submit" style="vertical-align:middle">
+      <a href="/Invoice1"><span>Generate Invoice 1</span></a>
     </button>
 
 
