--- a/templates/auther/index.html
+++ b/templates/auther/index.html
@@ -156,6 +156,9 @@ body {
     <button class ="button" type="submit" style="vertical-align:middle">
       <a href="/Invoice1"><span>Generate Invoice 1</span></a>
     </button>
+    <button class ="button" type="submit" style="vertical-align:middle">
+      <a href="/org"><span>add data</span></a>
+    </button>
 
 
 
