--- a/templates/auther/contact.html
+++ b/templates/auther/contact.html
@@ -86,7 +86,7 @@ input[type=submit]:hover {
         <input type="text" id="lname" name="lastname" placeholder="Your last name..">
         <label for="country">Country</label>
         <select id="country" name="country">
-            <option value="India">India</option> 
+            <option value="India">Inddia</option> 
           <option value="australia">Australia</option>
           <option value="canada">Canada</option>
           <option value="usa">USA</option>
