--- a/templates/auther/index.html
+++ b/templates/auther/index.html
@@ -119,6 +119,13 @@ body {
   <div class="topnav-right">
     <a href="#search">Search</a>
     <a href="/About">About</a>
+    {% if user.is_authenticated %}
+    
+      <a href="/signout"><span>Sign-out</span></a>
+      {% else %}
+      <a href="/signup"><span>Sign-up/span></a>
+      {% endif %}
+    
   </div>
 </div>
 
@@ -143,9 +150,6 @@ body {
     {% if user.is_authenticated %}
     <h3 class="h3"> Hello {{ fname }} </h3>
     <h4 class="h4"> You're successfully logged in</h4>
-    <button class ="button" type="submit">
-      <a href="/signout"><span>Sign-out</span></a>
-    </button>
     <button class ="button" type="submit" style="vertical-align:middle">
       <a href="/sample"><span>Sample Template</span></a>
     </button>
@@ -154,7 +158,7 @@ body {
       <a href="/invoice"><span>Generate Invoice</span></a>
     </button> -->
     <button class ="button" type="submit" style="vertical-align:middle">
-      <a href="/Invoice1"><span>Generate Invoice 1</span></a>
+      <a href="/Invoice1"><span>Generate Invoice</span></a>
     </button>
     <button class ="button" type="submit" style="vertical-align:middle">
       <a href="/org"><span>add data</span></a>
@@ -163,12 +167,12 @@ body {
 
 
     {% else %}
-    <button class="button" type="submit" style="vertical-align:middle">
+    <!-- <button class="button" type="submit" style="vertical-align:middle">
       <a href="/signup"><span>Sign-up</span></a>
     </button>
     <button class="button" type="submit" style="vertical-align:middle">
       <a href="/signin"><span>Sign-in</span></a>
-    </button>
+    </button> -->
     
 
     {% endif %}
