--- a/templates/auther/index.html
+++ b/templates/auther/index.html
@@ -123,7 +123,7 @@ body {
     
       <a href="/signout"><span>Sign-out</span></a>
       {% else %}
-      <a href="/signup"><span>Sign-up/span></a>
+      <a href="/signin"><span>Signin></a>
       {% endif %}
     
   </div>
@@ -162,6 +162,9 @@ body {
     </button>
     <button class ="button" type="submit" style="vertical-align:middle">
       <a href="/org"><span>add data</span></a>
+    </button>
+    <button class ="button" type="submit" style="vertical-align:middle">
+      <a href="/invoice"><span>Invoice form</span></a>
     </button>
 
 
