--- a/templates/auther/index.html
+++ b/templates/auther/index.html
@@ -123,7 +123,7 @@ body {
     
       <a href="/signout"><span>Sign-out</span></a>
       {% else %}
-      <a href="/signup"><span>Sign-up/span></a>
+      <a href="/signin"><span>Sign-in</a>
       {% endif %}
     
   </div>
@@ -161,7 +161,9 @@ body {
       <a href="/Invoice1"><span>Generate Invoice</span></a>
     </button>
     <button class ="button" type="submit" style="vertical-align:middle">
-      <a href="/org"><span>add data</span></a>
+      <a href="/org"><span>add data of org</span></a>
+      <a href="/company"><span>add data of Company</span></a>
+      
     </button>
 
 
