--- a/templates/auther/index.html
+++ b/templates/auther/index.html
@@ -124,7 +124,7 @@ body {
       <a href="/signout"><span>Sign-out</span></a>
       {% else %}
       <a href="/signin"><span>Sign-in</a>
-      <a href="/signin"><span>Signin></a>
+      <a href="/signup"><span>sign-up</a>
       {% endif %}
     
   </div>
@@ -168,6 +168,12 @@ body {
     </button>
     <button class ="button" type="submit" style="vertical-align:middle">
       <a href="/invoice"><span>Invoice form</span></a>
+    </button>
+    <button class ="button" type="submit" style="vertical-align:middle">
+      <a href="/bank"><span>bank form</span></a>
+    </button>
+    <button class ="button" type="submit" style="vertical-align:middle">
+      <a href="/template"><span>templates form</span></a>
     </button>
 
 
