--- a/templates/auther/index.html
+++ b/templates/auther/index.html
@@ -124,7 +124,7 @@ body {
       <a href="/signout"><span>Sign-out</span></a>
       {% else %}
       <a href="/signin"><span>Sign-in</a>
-      <a href="/signin"><span>Signin></a>
+      <a href="/signup"><span>signup></a>
       {% endif %}
     
   </div>
@@ -169,6 +169,13 @@ body {
     <button class ="button" type="submit" style="vertical-align:middle">
       <a href="/invoice"><span>Invoice form</span></a>
     </button>
+  </button>
+  <button class ="button" type="submit" style="vertical-align:middle">
+    <a href="/item"><span>Item form</span></a>
+  </button>
+  <button class ="button" type="submit" style="vertical-align:middle">
+    <a href="/templatefields"><span>Templatefields form</span></a>
+  </button>
 
 
 
