--- a/templates/auther/bank_form.html
+++ b/templates/auther/bank_form.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-
+{% extends "auther/base.html" %}
 {% block content %}
   <h1>bank Form</h1>
   <form method="post">
