--- a/templates/auther/templatefields_form.html
+++ b/templates/auther/templatefields_form.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
- 
+{% extends "auther/base.html" %} 
 {% block content %}
   <h1>Templatefields Form</h1>
   <form method="post">
