--- a/templates/auther/index.html
+++ b/templates/auther/index.html
@@ -124,11 +124,8 @@ body {
       <a href="/signout"><span>Sign-out</span></a>
       {% else %}
       <a href="/signin"><span>Sign-in</a>
-<<<<<<< HEAD
       <a href="/signup"><span>signup></a>
-=======
       <a href="/signup"><span>sign-up</a>
->>>>>>> 15ead56110961738a7dd1426995f75ee364c7064
       {% endif %}
     
   </div>
@@ -163,10 +160,10 @@ body {
       <a href="/invoice"><span>Generate Invoice</span></a>
     </button> -->
     <button class ="button" type="submit" style="vertical-align:middle">
-      <a href="/Invoice1"><span>Generate Invoice</span></a>
+      <a href="/generateinvoice"><span>Generate Invoice</span></a>
     </button>
     <button class ="button" type="submit" style="vertical-align:middle">
-      <a href="/org"><span>add data of org</span></a>
+      <!-- <a href="/org"><span>add data of org</span></a> -->
       <a href="/company"><span>add data of Company</span></a>
       
     </button>
