--- a/templates/auther/base.html
+++ b/templates/auther/base.html
@@ -113,7 +113,7 @@ body {
 
 <nav>
 <div class="topnav">
-  <a class="active" href="#home">Home</a>
+  <a class="active" href="/home">Home</a>
   <a href="#news">News</a>
   <a href="/contact">Contact</a>
   <div class="topnav-right">
