--- a/templates/auther/show.html
+++ b/templates/auther/show.html
@@ -5,6 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+                
+table {
+  font-family: Arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+  margin: auto;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+
+th {
+  background-color: #3b4bc7;
+  color: white;
+}
+        </style>
 </head>
 <body>
     {% extends "auther/base.html" %}
@@ -35,7 +59,6 @@
                     {% for values in row %}
                         <td>{{ values }}</td>
                     {% endfor %}
-                    <td>{{table_name}}</td>
                     <td><a href="{% url 'delete_row' table_name app_name model_name row.0%}">Delete</a></td>
                     <td><a href="{% url 'update_row' table_name app_name model_name row.0%}">Update</td>
                 </tr>
