--- a/templates/auther/Generateinvoice.html
+++ b/templates/auther/Generateinvoice.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+  {% extends "auther/base.html" %}
 
 {% block content %}
   <h1>generate invoice Form</h1>
