--- a/templates/auther/base.html
+++ b/templates/auther/base.html
@@ -1,144 +1,262 @@
 
+
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<style>
-  .h1 {
-  font-family: "Times New Roman", Times, serif;
-}
-.h3 {
-  font-family: "Times New Roman", Times, serif;
-}
-.h4 {
-  font-family: "Times New Roman", Times, serif;
-}
-  .button {
-  display: inline-block;
-  border-radius: 4px;
-  background-color: #141314d9;
-  border: none;
-  /* color: #f51010; */
-  text-align: center;
-  font-size: 28px;
-  padding: 20px;
-  width: 200px;
-  transition: all 0.5s;
-  cursor: pointer;
-  margin: 5px;
-}
-.button
-{
-    font-size: 20px;
-    color:rgb(222, 229, 228);
-}
-
-.button span {
-  cursor: pointer;
-  display: inline-block;
-  position: relative;
-  transition: 0.5s;
-}
-
-.button span:after {
-  content: '\00bb';
-  position: absolute;
-  opacity: 0;
-  top: 0;
-  right: -20px;
-  transition: 0.5s;
-}
-
-.button:hover span {
-  padding-right: 25px;
-}
-
-.button:hover span:after {
-  opacity: 1;
-  right: 0;
-}
-body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.topnav {
-  overflow: hidden;
-  background-color: #333;
-}
-
-.topnav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.topnav a.active {
-  background-color: #0b9cd5ad;
-  color: white;
-}
-
-.topnav-right {
-  float: right;
-}
-
- 
-     section{
-        background-image: url("https://invoicebus.com/templates/wp-content/uploads/Business-invoice-template-niana-8.jpg");
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-        height:1000px;
-        
-        width:100%;
-
-     }
-     
-    </style>
+	<title>My UI Design</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 </head>
+	<style>
 
-<body>
+.dropdown {
+    position: relative;
+  }
+  .dropdown-toggle {
+    display: block;
+  }
+  .dropdown-menu {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 10;
+    display: none;
+  }
+  .dropdown-menu li {
+    display: block;
+  }
 
-<nav>
-<div class="topnav">
-  <a class="active" href="/home">Home</a>
-  <a href="#news">News</a>
-  <a href="/contact">Contact</a>
-  <div class="topnav-right">
-    <a href="#search">Search</a>
-    <a href="/About">About</a>
-    {% if user.is_authenticated %}
-    
-      <a href="/signout"><span>Sign-out</span></a>
-      {% else %}
-      <a href="/signin"><span>Sign-in</a>
-      <a href="/signup"><span>sign-up</a>
-      {% endif %}
-    
-  </div>
-</div>
-</nav>
-{% block content %}
+  /* Styles for the open dropdown menu */
+  .open .dropdown-menu {
+    display: block;
+  }
+header {
+  background-color: #96969e;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  padding: 10px;
+}
 
-{% endblock %}
+nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+nav li {
+  margin-left: 10px;
+  position: relative;
+}
+
+nav a {
+  display: block;
+  padding: 10px;
+  color: #130303;
+  text-decoration: none;
+  font-weight: bold;
+  transition: all 0.3s ease-in-out;
+}
+
+nav a:hover {
+  color: #240b92;
+}
+
+nav ul ul {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  display: none;
+  background-color: #999797;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+nav ul ul li {
+  margin: 0;
+  position: relative;
+}
+
+nav ul ul a {
+  padding: 10px;
+  color: #333;
+  text-decoration: none;
+  font-weight: bold;
+  transition: all 0.3s ease-in-out;
+}
+
+nav ul ul a:hover {
+  color: #0505c5;
+}
+
+nav li:hover > ul {
+  display: block;
+}
+
+form input[type="text"] {
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  margin-right: 10px;
+}
+
+form button[type="submit"] {
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: #0099ff;
+  color: #fff;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+
+form button[type="submit"]:hover {
+  background-color: #0077cc;
+}
+
+nav form {
+  margin-left: auto;
+}
+
+main {
+  padding: 20px;
+  min-height: 500px;
+  display: grid; /* Use a grid layout */
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 20px;
+}
+
+img:hover { 
+  opacity: 0.8;
+}
 
 
+
+
+.container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 20px;
+}
+
+button {
+  animation: pulse 1s infinite; /* Add animations */
+}
+
+
+section {
+    position: relative;
+    height: 1000px;
+    width: 100%;
+  }
+
+  .background-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+  }
+
+  .background-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    animation: fade 12s infinite;
+  }
+
+  .image1 {
+    background-image: url("https://assets.materialup.com/uploads/d627b67e-5c37-4f36-b066-221855e7d906/preview.jpg");
+    animation-delay: 0s;
+    opacity: 1;
+  }
+
+  .image2 {
+    background-image: url(".jpg");
+    animation-delay: 4s;
+  }
+
+  .image3 {
+    background-image: url(".jpg");
+    animation-delay: 8s;
+  }
 
   
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+
+	</style>
+</head>
+<body>
+  
+	<header>
+		<nav>
+			<ul>
+        
+				<li><a href="/home"><i class="fas fa-home"></i> Home</a></li>
+				<li><a href="/About">About</a></li>
+				<li><a href="/contact"><i class="fas fa-envelope"></i> Contact Us</a></li>
+        {% if user.is_authenticated %}
+				<li class="dropdown">
+          <a href="#" class="dropdown-toggle">Dropdown Menu <i class="fas fa-chevron-down"></i></a>
+          <ul class="dropdown-menu">
+            <li><a href="/sample">Sample Template</a></li>
+            <li><a href="/org">Insert Organisation Data </a></li>
+            <li><a href="#">Option 3</a></li>
+          </ul>
+        </li>
+		    {% endif %}
+      
+        {% if user.is_authenticated %}
+      <a href="/signout"><span>Log out</span><i class="fas fa-sign-out-alt"></i></a>
+      {% else %}
+    	<li><a href="/Login"><i class="fas fa-sign-in-alt"></i> Login</a></li>
+      <li><a href="/signup"><i class="fas fa-user-plus"></i> Signup</a></li>
+      
+      {% endif %}
+				<li>
+					<form  method="post" action="/search">
+						<input type="text" placeholder="Search...">
+						<button type="submit"><i class="fa fa-search"></i></button>
+					</form>
+				</li>
+			</ul>
+		</nav>
+	</header>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script>
+    // JavaScript to toggle the open class on the dropdown parent li element
+    var dropdowns = document.querySelectorAll('.dropdown');
+    dropdowns.forEach(function(dropdown) {
+      var dropdownToggle = dropdown.querySelector('.dropdown-toggle');
+      dropdownToggle.addEventListener('click', function(event) {
+        event.preventDefault();
+        dropdown.classList.toggle('open');
+      });
+    });
+  </script>
+  <section>
+		<div class="background-container">
+		  <div class="background-image image1"></div>
+		  <div class="background-image image2"></div>
+		  <div class="background-image image3"></div>
+		</div>
+		<!-- rest of the section content goes here -->
+	  </section>
+	
+	
 </body>
 </html>
+
+
+
+
+
+
+
+				
