--- a/templates/auther/base.html
+++ b/templates/auther/base.html
@@ -186,32 +186,82 @@ section {
     background-image: url(".jpg");
     animation-delay: 8s;
   }
-
-  
-
-
 	</style>
 </head>
 <body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="/home"><i class="fas fa-home"></i> Home</a></li>
+        <li><a href="/About">About</a></li>
+        <li><a href="/contact"><i class="fas fa-envelope"></i> Contact Us</a></li>
   
-	<header>
+        {% if user.is_authenticated %}
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle">Our Services <i class="fas fa-chevron-down"></i></a>
+
+          <ul class="dropdown-menu">
+            <li><a href="/sample">Sample Template</a></li>
+
+            <li class="dropdown-submenu">
+              <a href="#">Add Data <i class="fas fa-chevron-right"></i></a>
+              <ul class="dropdown-menu pull-right">
+                <li><a href="#">Organisation</a></li>
+                <li><a href="#">Bank</a></li>
+                <li><a href="#">Company</a></li>
+              </ul>
+            </li>
+            <li class="dropdown-submenu">
+              <a href="#">Add Data <i class="fas fa-chevron-right"></i></a>
+              <ul class="dropdown-menu pull-right">
+                <li><a href="#">Organisation</a></li>
+                <li><a href="#">Bank</a></li>
+                <li><a href="#">Company</a></li>
+              </ul>
+            </li>
+          </ul>
+          
+        </li>
+        <li>
+          <a href="/signout"><span>Log out</span><i class="fas fa-sign-out-alt"></i></a>
+        </li>
+  
+        <li>
+          <form method="post" action="/search">
+            <input type="text" placeholder="Search...">
+            <button type="submit"><i class="fa fa-search"></i></button>
+          </form>
+        </li>
+  
+        {% else %}
+        <li><a href="/Login"><i class="fas fa-sign-in-alt"></i> Login</a></li>
+        <li><a href="/signup"><i class="fas fa-user-plus"></i> Signup</a></li>
+        {% endif %}
+      </ul>
+    </nav>
+  </header>
+	<!-- <header>
 		<nav>
 			<ul>
         
 				<li><a href="/home"><i class="fas fa-home"></i> Home</a></li>
 				<li><a href="/About">About</a></li>
 				<li><a href="/contact"><i class="fas fa-envelope"></i> Contact Us</a></li>
+
         {% if user.is_authenticated %}
 				<li class="dropdown">
           <a href="#" class="dropdown-toggle">Dropdown Menu <i class="fas fa-chevron-down"></i></a>
           <ul class="dropdown-menu">
             <li><a href="/sample">Sample Template</a></li>
-            <li><a href="/org">Insert Organisation Data </a></li>
-            <li><a href="#">Option 3</a></li>
-          </ul>
+            <li class="dropdown-submenu">
+              <a href="#">Subcategories <i class="fas fa-chevron-right"></i></a>
+              <ul class="dropdown-menu">
+                <li><a href="#">Subcategory 1</a></li>
+                <li><a href="#">Subcategory 2</a></li>
+                <li><a href="#">Subcategory 3</a></li>
+          <ul>
         </li>
 		    {% endif %}
-      
         {% if user.is_authenticated %}
       <a href="/signout"><span>Log out</span><i class="fas fa-sign-out-alt"></i></a>
       {% else %}
@@ -227,7 +277,7 @@ section {
 				</li>
 			</ul>
 		</nav>
-	</header>
+	</header> -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script>
     // JavaScript to toggle the open class on the dropdown parent li element
