--- a/templates/auther/signup.html
+++ b/templates/auther/signup.html
@@ -181,7 +181,7 @@ button[type="submit"]:hover {
         <h3>Signup Here</h3>
 
         <label for="username">Username</label>
-        <input type="text" placeholder="Username" name="username" id="username">
+        <input type="text" placeholder="username" name="username" id="username">
     
         <label for="fname">First Name</label>
         <input type="text" class="form-control" id="fname" name="fname" placeholder="Enter Your First Name" Required>
