--- a/templates/auther/base.html
+++ b/templates/auther/base.html
@@ -7,7 +7,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 </head>
 	<style>
-
+.dropdown-submenu:hover > .dropdown-menu {
+        margin-left: 100%;
+        margin-top: -30px;
+}
 .dropdown {
     position: relative;
   }
@@ -212,11 +215,11 @@ section {
               </ul>
             </li>
             <li class="dropdown-submenu">
-              <a href="#">Add Data <i class="fas fa-chevron-right"></i></a>
+              <a href="#">View Details <i class="fas fa-chevron-right"></i></a>
               <ul class="dropdown-menu pull-right">
-                <li><a href="#">Organisation</a></li>
-                <li><a href="#">Bank</a></li>
-                <li><a href="#">Company</a></li>
+                <li><a href="#">Organisation Detail</a></li>
+                <li><a href="#">Bank Detail</a></li>
+                <li><a href="#">Company Detail</a></li>
               </ul>
             </li>
           </ul>
